--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "Boundarylessness",
     "devkit",
     "exuser",
+    "fontawesome",
+    "fortawesome",
     "glyphicon",
     "glyphicons",
     "paise",
